Apply some fixes only on dark mode

--- a/stylesheets/_widgets.less
+++ b/stylesheets/_widgets.less
@@ -69,21 +69,23 @@
   background-color: var(--theme-color-header-background);
 }
 
-.jqplot-seriespicker {
-  filter: invert();
-}
+@media (prefers-color-scheme: dark) {
+  .jqplot-seriespicker {
+    filter: invert();
+  }
+  
+  .jqplot-seriespicker-popover {
+    filter: invert();
+    border-color: var(--theme-color-menu-contrast-background) !important;
+    background-color: var(--theme-color-menu-contrast-background) !important;
+    color: var(--color-widget-title-text) !important;
+  }
+  
+  .realTimeMap_overlay {
+      text-shadow: none;
+  }
 
-.jqplot-seriespicker-popover {
-  filter: invert();
-  border-color: var(--theme-color-menu-contrast-background) !important;
-  background-color: var(--theme-color-menu-contrast-background) !important;
-  color: var(--color-widget-title-text) !important;
-}
-
-.realTimeMap_overlay {
-    text-shadow: none;
-}
-
-#widgetDevicesDetectiongetType .theWidgetContent .card .card-content table.dataTable img {
-  filter: invert();
+  #widgetDevicesDetectiongetType .theWidgetContent .card .card-content table.dataTable img {
+    filter: invert();
+  }
 }
